--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "4": "0.0.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "firebase": "^5.5.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.1.0",
